--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.53.0",
-    "@types/node": "^24.0.0"
+    "@types/node": "^24.0.0",
+    "allure-playwright": "^3.3.0"
   }
 }
