--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,11 +26,14 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: 🧪 Lancer les tests Playwright
-        run: npx playwright test
+        run: npx playwright test --reporter=html || true
 
       - name: 📊 Upload du rapport de test
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report
+
+      - name: ✅ Fin du workflow
+        run: echo "Tests Playwright terminés"
