--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,13 @@ pool:
 steps:
   - task: NodeTool@0
     inputs:
-      versionSpec: '20.x'
+      versionSpec: '18.x'
     displayName: 'Install Node.js'
+- task: NodeTool@0
+  inputs:
+    versionSource: 'spec'
+    versionSpec: '18.x'
+    checkLatest: true
 
   - script: |
       npm ci
@@ -16,7 +21,10 @@ steps:
       npx playwright test
     displayName: 'Install dependencies and run tests'
 
-  - task: PublishPipelineArtifact@1
+
+- task: NodeTaskRunnerInstaller@0
+  inputs:
+    nodeVersion: '6'
     inputs:
       targetPath: 'playwright-report'
       artifact: 'playwright-html-report'
